--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17"/>
 	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -9,5 +13,16 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/VISHAL SAWAI/Downloads/cos.jar/cos.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VISHAL SAWAI/Downloads/commons-fileupload-1.5-bin/commons-fileupload-1.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VISHAL SAWAI/Downloads/commons-fileupload-1.5-bin/commons-fileupload-1.5-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VISHAL SAWAI/Downloads/commons-fileupload-1.5-bin/commons-fileupload-1.5-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VISHAL SAWAI/Downloads/commons-fileupload-1.5-bin/commons-fileupload-1.5-tests.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VISHAL SAWAI/Downloads/commons-fileupload-1.5-bin/commons-fileupload-1.5-test-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VISHAL SAWAI/Downloads/commons-io-2.11.0/commons-io-2.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VISHAL SAWAI/Downloads/commons-io-2.11.0/commons-io-2.11.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VISHAL SAWAI/Downloads/commons-io-2.11.0/commons-io-2.11.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VISHAL SAWAI/Downloads/commons-io-2.11.0/commons-io-2.11.0-tests.jar"/>
+	<classpathentry kind="lib" path="C:/Users/VISHAL SAWAI/Downloads/commons-io-2.11.0/commons-io-2.11.0-test-sources.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
